[gd_scene load_steps=6 format=1]

[ext_resource path="res://actors/store/store_ui.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.34375, 0.337036, 0.337036, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.171875, 0.169189, 0.169189, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="ui" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 244.0
margin/top = 82.0
margin/right = 791.0
margin/bottom = 492.0
script/script = ExtResource( 1 )

[node name="item_panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.0
margin/top = 68.0
margin/right = 197.0
margin/bottom = 365.0
custom_styles/panelf = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
custom_styles/panelnc = SubResource( 3 )

[node name="item_list" type="ScrollContainer" parent="item_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 1.0
margin/right = 169.0
margin/bottom = 296.0
scroll/horizontal = true
scroll/vertical = true

[node name="button_list" type="VButtonArray" parent="item_panel/item_list"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 167.0
margin/bottom = 0.0
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 40.0
margin/top = 4.0
margin/right = 141.0
margin/bottom = 62.0
custom_constants/separation = 10
alignment = 0

[node name="mode_button" type="HButtonArray" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 101.0
margin/bottom = 20.0
flat = false
button/count = 2
button/min_button_size = -1.0
button/align = 0
button/0/text = "buy"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "sell"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0

[node name="category_button" type="OptionButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 101.0
margin/bottom = 50.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="description" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 277.0
margin/top = 104.0
margin/right = 416.0
margin/bottom = 284.0
custom_styles/panel = SubResource( 4 )

[node name="quantity" type="LineEdit" parent="description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 150.0
margin/right = 86.0
margin/bottom = 174.0
text = "0"
placeholder/text = "price"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="transaction_button" type="Button" parent="description"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 93.0
margin/top = 151.0
margin/right = 128.0
margin/bottom = 171.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "buy"
flat = false

[node name="price" type="Label" parent="description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 129.0
margin/right = 129.0
margin/bottom = 143.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="close_button " type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 519.0
margin/top = 3.0
margin/right = 538.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x"
flat = true


